--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
+    "dom-parser": "^0.1.5",
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-ejs-layouts": "^2.3.1",
+    "jsdom": "^11.6.2",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "request": "^2.83.0",
