--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.83.0",
     "router": "^1.3.2",
-    "routy": "^0.2.3"
+    "routy": "^0.2.3",
+    "sequelize": "^4.33.4"
   }
 }
