--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "request": "^2.83.0",
     "router": "^1.3.2",
     "routy": "^0.2.3",
-    "sequelize": "^4.33.4"
+    "sequelize": "^4.33.4",
+    "twit": "^2.2.9"
   }
 }
